<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Jan Kühle

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">Car Report</string>
    <string name="app_version">2.6.1</string>
    <string name="app_description">Enter the costs of your car and receive nice reports and statistics.</string>
    <string name="about_author">© Jan Kühle</string>
    <string name="about_version">Version: %s</string>
    <string name="about_licenses">Licenses</string>
    <string name="hint_mileage">Mileage</string>
    <string name="hint_mileage_optional">Mileage (optional)</string>
    <string name="hint_volume">Volume</string>
    <string name="hint_price">Price</string>
    <string name="hint_note_optional">Note (optional)</string>
    <string name="hint_title">Title</string>
    <string name="label_partial">Partial</string>
    <string name="label_overwrite">Overwrite existing files</string>
    <string name="suspended">Suspended</string>
    <string name="suspended_since">Suspended since %s</string>
    <string name="menu_synchronize">Synchronize</string>
    <string name="menu_add_refueling">Add refueling</string>
    <string name="menu_add_other">Add other</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_save">Done</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_view_data">View data</string>
    <string name="menu_calculate">Calculate</string>
    <string name="menu_add_car">Add car</string>
    <string name="menu_show_trend">Show trend</string>
    <string name="menu_suspend">Suspend</string>
    <string name="menu_unsuspend">Unsuspend</string>
    <string name="section_car">Car</string>
    <string name="section_note">Note</string>
    <string name="title_add_refueling">Add refueling</string>
    <string name="title_edit_refueling">Edit refueling</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_view_data">Data</string>
    <string name="title_add_other">Add other</string>
    <string name="title_edit_other">Edit other</string>
    <string name="cab_title_selected">%d selected</string>
    <string name="edit_title_refueling">Refueling</string>
    <string name="edit_message_no_entry_selected">No entry selected</string>
    <string name="alert_add_car_title">Add car</string>
    <string name="alert_edit_car_title">Edit car</string>
    <string name="alert_add_car_message">Enter the name of the car:</string>
    <string name="alert_delete_refueling_message">This refueling will be deleted.</string>
    <string name="alert_delete_other_message">This other cost will be deleted.</string>
    <string name="alert_delete_cars_message">The %d selected cars will be deleted.</string>
    <string name="alert_cannot_delete_last_car">One car cannot be deleted.</string>
    <string name="alert_delete_refuelings_message">The %d selected refuelings will be deleted.</string>
    <string name="alert_about_licenses_title">Licenses</string>
    <string name="alert_delete_title">Confirm delete</string>
    <string name="alert_delete_others_message">The %d selected other costs will be deleted.</string>
    <string name="alert_change_color_title">Choose color</string>
    <string name="alert_validate_title">Additional values required</string>
    <string name="alert_validate_greater_zero">%s has to be greater 0.</string>
    <string name="alert_validate_not_empty">%s must not be empty.</string>
    <string name="alert_dropbox_finishing_authentication">Finishing authentication…</string>
    <string name="alert_dropbox_first_sync_title">First synchronization</string>
    <string name="alert_dropbox_first_sync_message">There is remote data available. Please choose which data you want to use on your first synchronization.</string>
    <string name="alert_dropbox_first_sync_download">Online data</string>
    <string name="alert_dropbox_first_sync_upload">Local data</string>
    <string name="alert_backup_overwrite_title">Backup</string>
    <string name="alert_backup_overwrite_message">A previous backup file does already exist on SD card.</string>
    <string name="alert_restore_title">Restore</string>
    <string name="alert_restore_message">When restoring from file, all current data will be overwritten. Also make sure the backup is from an app with equal or lower version than the one installed.</string>
    <string name="overwrite">Overwrite</string>
    <string name="restore">Restore</string>
    <string name="export">Export</string>
    <string name="import_">Import</string>
    <string name="toast_synchronization_failed">Synchronization failed.</string>
    <string name="toast_refueling_saved">Refueling saved.</string>
    <string name="toast_refueling_deleted">Refueling deleted.</string>
    <string name="toast_other_saved">Other cost saved.</string>
    <string name="toast_other_deleted">Other cost deleted.</string>
    <string name="toast_dropbox_authentication_failed">Dropbox authentication failed.</string>
    <string name="toast_backup_success">Backup to file %s completed successfully.</string>
    <string name="toast_backup_failed">Backup failed.</string>
    <string name="toast_restore_success">Restore completed successfully.</string>
    <string name="toast_restore_failed">Restore failed.</string>
    <string name="toast_export_success">Export to SD card completed successfully.</string>
    <string name="toast_export_failed_overwrite">Export failed because a file does already exist on SD card.</string>
    <string name="toast_import_success">Import completed successfully.</string>
    <string name="toast_import_failed">Errors occurred during import. Please cofirm, that your data is still valid.</string>
    <string name="toast_import_files_dont_exist">The files, that are needed for the import, do not exist on the SD card.</string>
    <string name="tab_indicator_refuelings">Refuelings</string>
    <string name="tab_indicator_other">Other costs</string>
    <string name="graph_options_desc">Graph options</string>
    <string name="report_trend_label">%s (Trend)</string>
    <string name="report_graph_month_history">Month History</string>
    <string name="report_graph_year_history">Year History</string>
    <string name="report_graph_accumulated">Accumulated</string>
    <string name="report_graph_normal">Normal</string>
    <string name="report_not_enough_data">Not enough data</string>
    <string name="report_overall">Overall</string>
    <string name="report_since">&#931; since %s</string>
    <string name="report_lowest">Lowest</string>
    <string name="report_highest">Highest</string>
    <string name="report_at_least">At least</string>
    <string name="report_at_most">At most</string>
    <string name="report_average">Average</string>
    <string name="report_toast_car">Car</string>
    <string name="report_toast_consumption">Consumption</string>
    <string name="report_toast_mileage">Mileage</string>
    <string name="report_toast_price">Price</string>
    <string name="report_toast_date">Date</string>
    <string name="report_calc_multiply_name">Multiply</string>
    <string name="report_calc_multiply_hint1">Factor</string>
    <string name="report_calc_vol2mileage_name">How far do I get with X %s?</string>
    <string name="report_calc_mileage2vol_name">How many %1$s do I need for X %2$s?</string>
    <string name="report_calc_vol2price_name">How much do X %s cost?</string>
    <string name="report_calc_price2vol_name">How many %1$s do I get for X %2$s?</string>
    <string name="pref_title_header_about">About Car Report</string>
    <string name="pref_title_header_general">General settings</string>
    <string name="pref_title_header_cars">Cars</string>
    <string name="pref_title_category_syncronisation">Synchronisation</string>
    <string name="pref_title_header_backup">Backup &amp; Export</string>
    <string name="pref_title_category_defaults">Defaults</string>
    <string name="pref_title_category_appearance">Appearance</string>
    <string name="pref_title_category_units">Units</string>
    <string name="pref_title_category_backup">Backup &amp; Restore</string>
    <string name="pref_title_category_export">Export &amp; Import</string>
    <string name="pref_title_default_car">Car</string>
    <string name="pref_title_default_report">Report</string>
    <string name="pref_title_appearance_overall_section_pos">Position of section Overall</string>
    <string name="pref_title_appearance_color_sections">Color sections</string>
    <string name="pref_title_appearance_show_legend">Show legend in graph</string>
    <string name="pref_title_unit_currency">Currency</string>
    <string name="pref_title_unit_volume">Volume</string>
    <string name="pref_title_unit_distance">Distance</string>
    <string name="pref_title_sync_dropbox">Dropbox</string>
    <string name="pref_title_sync_on_start">On start</string>
    <string name="pref_title_sync_on_change">On data change</string>
    <string name="pref_title_backup">Backup</string>
    <string name="pref_title_restore">Restore</string>
    <string name="pref_title_exportcsv">Export CSV</string>
    <string name="pref_title_importcsv">Import CSV</string>
    <string name="pref_summary_appearance_overall_section_pos">The section Overall displays average values, when you use the app for more than one car. Set position: %s</string>
    <string name="pref_summary_appearance_color_sections">Show the section headings in the color of their corresponding car.</string>
    <string name="pref_summary_appearance_show_legend">Show a legend in the graphs, displaying which line belongs to which car.</string>
    <string name="pref_summary_sync_dropbox_link">Setup synchronization with dropbox. Warning: This is a very simple synchronization. When you change data on two devices simultaniously and then synchronize, the device, which synchronizes last, will loose its changes.</string>
    <string name="pref_summary_sync_dropbox_unlink">Linked to %s. Click to unlink.</string>
    <string name="pref_summary_sync_on_start">Automatically synchronize when the app starts.</string>
    <string name="pref_summary_sync_on_change">Automatically synchronize when data is changed.</string>
    <string name="pref_summary_backup">Backup the current data to SD card.</string>
    <string name="pref_summary_restore">Restore data from file %s on SD card.</string>
    <string name="pref_summary_restore_no_data">File %s does not exist on SD card.</string>
    <string name="pref_summary_exportcsv">Export data as CSV so you can use it in other programs like Microsoft Excel or LibreOffice Calc.</string>
    <string name="pref_summary_importcsv">Import data from CSV files. The files must look like the ones, that are generated during CSV export. Import will update existing entries and add new ones, but it will not delete entries.</string>
    <string name="help_section_getting_started">Getting started</string>
    <string name="help_section_tips">Tips</string>
    <string name="help_section_calculations">Calculations</string>
</resources>