<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/pref_title_category_backup" >
        <Preference
            android:key="backup"
            android:summary="@string/pref_summary_backup"
            android:title="@string/pref_title_backup" />
        <Preference
            android:key="restore"
            android:summary="@string/pref_summary_restore"
            android:title="@string/pref_title_restore" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_category_export" >
        <Preference
            android:key="exportcsv"
            android:summary="@string/pref_summary_exportcsv"
            android:title="@string/pref_title_exportcsv" />
    </PreferenceCategory>
</PreferenceScreen>